syntax = "proto3";

option csharp_namespace = "homectl.Protocol.Client";

package homectl;

service Information {
	//  Gets the client's IP address as the server perceives it.
	rpc GetClientIpAddress (Empty) returns (IpAddressResponse);
}

message Empty {
}

message IpAddressResponse {
	string ipAddress = 1;
}